# esp32_gemini_custom

./: .gitignore  README.md  platformio.ini
lib/esp32_camera/: CMakeLists.txt  Kconfig  esp_cam_utils.h  gemini_integration_plan.md  library.json
lib/esp32_camera/driver/: cam_hal.c  esp_camera.c  sccb.c  sensor.c
lib/esp32_camera/driver/include/: sensor.h
lib/esp32_camera/include/: esp_cam_utils.h
lib/esp32_camera/utils/: esp_cam_base64.c  esp_cam_base64.h  esp_cam_json.c  esp_cam_json.h  esp_cam_utils.c  gemini_client.c  gemini_client.h
src/: custom_cam.c  custom_cam.cpp  custom_cam.h  encoder.c  encoder.h  main.cpp
